# line-follower-simulator

./: Cargo.toml  TODO.md
bevy-experiment/: Cargo.toml
bevy-experiment/src/: main.rs
bevy-experiment/src/ui/: mod.rs
bot/: Cargo.toml  build.sh
bot/src/: async_api.rs  async_event_loop.rs  async_framework.rs  bindings.rs  blocking_api.rs  lib.rs  line_follower_robot.rs  value_ext.rs
bot/src/examples/: basic_pid.rs  mod.rs  telemetry_test.rs  toy.rs
bot/src/examples/nb/: mod.rs  toy.rs
execution-data/: Cargo.toml
execution-data/src/: lib.rs
executor-playground/: Cargo.toml
executor-playground/src/: main.rs
presentation/: pres.sh  slides.md  style.yaml  term.sh  wezterm.lua
sim/: .gitignore  Cargo.toml
sim/execution-data/: Cargo.toml
sim/execution-data/src/: lib.rs
sim/executor-playground/src/: bindings.rs  bot_wasm_host.rs  main.rs  mock_stepper.rs
sim/executor/src/: lib.rs  mock_stepper.rs  wasm_bindings.rs  wasm_host.rs
sim/sim/: Cargo.toml
sim/sim/src/: app_builder.rs  data.rs  main.rs  runner.rs  track.rs  track_selection.rs  ui.rs  ui_runner.rs  ui_test.rs  visualizer.rs
sim/sim/src/app_builder/: mod.rs
sim/sim/src/bot/: mod.rs  vis.rs
sim/sim/src/bot/model/: mod.rs
sim/sim/src/bot/sensors/: line_sensors.rs  mod.rs  motor_angles.rs
sim/sim/src/motors/: mod.rs
sim/sim/src/runner/: mod.rs
sim/sim/src/sensors/: imu.rs  mod.rs  motor_angles.rs
sim/sim/src/track/: mod.rs
sim/sim/src/ui/: mod.rs
sim/sim/src/utils/: mod.rs
sim/sim/src/visualizer/: mod.rs
wit/: world.wit
