[package]
name = "line-follower-robot"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
wit-bindgen = { version = "0.46.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:line-follower-robot"

[package.metadata.component.dependencies]
