[workspace]

resolver = "2"

members = [
    "execution-data", "executor", "sim", "bevy_panorbit_camera"
]

exclude = [
    "sample-robot-code", "bevy-experiment",
]

[workspace.dependencies]
clap = { version = "3.1.15", features = ["derive"] }
anyhow = "1.0.99"
wasmtime = "36.0.2"
bevy_rapier3d = { version = "*", features = [ "debug-render-3d" ] }
bevy = { version = "0.16.1", features = ["dynamic_linking", "bevy_picking"] }
# bevy = { version = "0.16.1", features = ["bevy_picking"] }
# bevy_panorbit_camera = {version = "0.28.0", features = ["bevy_egui"]}
bevy_egui = "0.36.0"
egui-file-dialog = "=0.11.0"
egui_material_icons = "=0.4.0"
egui_commonmark = "0.21"
image = { version = "0.25", default-features = false, features = ["png"] }
tiny_http = "0.12.0"
rand = "0.9.2"
rand_distr = "0.5.1"
