[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = "line-tables-only"

[dependencies]
clap = {workspace = true}
execution-data = { path = "../execution-data" }
executor = { path = "../executor" }
bevy_rapier3d = { workspace = true }
bevy = { workspace = true }
bevy_editor_cam = { workspace = true }
bevy_egui = { workspace = true }
egui-file-dialog = { workspace = true }
egui_material_icons = { workspace = true }
