[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = "line-tables-only"

[dependencies]
clap = {workspace = true}
execution-data = { path = "../execution-data" }
executor = { path = "../executor" }
bevy_rapier3d = { workspace = true }
bevy = { workspace = true }
# bevy_panorbit_camera = { workspace = true }
bevy_panorbit_camera = {path = "../bevy_panorbit_camera", features = ["bevy_egui"]}
bevy_egui = { workspace = true }
egui-file-dialog = { workspace = true }
egui_material_icons = { workspace = true }
egui_commonmark = { workspace = true }
image = { workspace = true }
tiny_http = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
